New act payment
Animacion y estilos

--- a/main.html
+++ b/main.html
@@ -44,15 +44,193 @@
 
     <section class="preferences-bottom-content hdd">
 
-      <section class="hdd-container wz-scroll">
-        <section class="preferences-hdd-payment space active">
+      <section class="hdd-container free-user">
+
+        <section class="preferences-hdd-payment space-premium premium">
+
+
+
+            <article class="preferences-hdd-payment-top">
+
+              <figure>
+                <i></i>
+              </figure>
+              <span>#TITTLE PREMIUM#</span>
+
+            </article>
+
+            <article class="preferences-hdd-payment-middle">
+              <article class="box-hdd-usage">
+                <article class="hdd-info preferences-hdd-quota big-box-hdd">
+                      <span class="preferences-hdd-usage"></span>
+
+                      <figure class="preferences-hdd-cake">
+                        <span class="preferences-hdd-cake-circle">
+                          <span class="preferences-hdd-cake-total"></span>
+                          <span class="preferences-hdd-cake-free"></span>
+                        </span>
+
+                          <canvas class="preferences-hdd-canvas" width="220" height="221"></canvas>
+
+                      </figure>
+                </article>
+
+
+              </article>
+
+              <article class="box-current-plan">
+
+
+                <article class="box-current-plan-top">
+                  <span>#Plan activo#</span>
+                </article>
+
+                <article class="box-current-plan-middle">
+
+                  <article class="premium-version">
+                    <article class="premium-info">
+                      <article class="left">
+                        <span>#50GB extra#</span>
+                      </article>
+                      <article class="right">
+                        <span>#2€/MES#</span>
+                      </article>
+                    </article>
+                    <article class="premium-date">
+                      <span>#Siguiente pago el 12/12/2012#</span>
+                    </article>
+                  </article>
+
+
+                </article>
+
+                <article class="box-current-plan-bottom">
+                  <article class="ui-btn siguiente accept">
+                    <span>#Boton Aceptar#</span>
+                  </article>
+                </article>
+
+
+              </article>
+            </article>
+
+        </section>
+
+        <section class="preferences-hdd-payment modify-premium premium">
+
 
           <article class="preferences-hdd-payment-top">
 
             <figure>
               <i></i>
             </figure>
-            <span>#TITTLE#</span>
+            <span>#TITTLE PREMIUM#</span>
+
+
+          </article>
+
+          <article class="preferences-hdd-payment-middle">
+
+            <article class="current-plan-options premium">
+
+              <article class="info-current-plan">
+                <article class="info-options big-box-hdd">
+                    <article class="options-top">
+                      <article class="options-top-left">
+                        <span class="big-text">#50GB Extra#</span>
+                        <span>#2€/mes#</span>
+                      </article>
+
+                      <article class="change-plan">
+                          <span>#Modificar#</span>
+                      </article>
+                    </article>
+
+                    <article class="options-middle">
+                      <span>#Se cobra el 7 de cada mes#</span>
+                    </article>
+
+                    <article class="options-bottom">
+                      <span>#Espacio total#</span>
+                      <span class="big-text grey">#75GB#</span>
+                    </article>
+                </article>
+              </article>
+
+              <article class="info-current-card">
+
+                <article class="info-current-card-top">
+
+                  <article class="type-card small-box-hdd">
+
+                    <article class="img-card">
+
+                    </article>
+                    <span>#Tarjeta de credito#</span>
+
+                  </article>
+
+                  <!--
+
+                  <article class="inevio-credit small-box-hdd">
+
+                    <article class="img-card">
+
+                    </article>
+                    <span>#INEVIO CREDIT#</span>
+
+                  </article>
+
+                -->
+                </article>
+
+                <article class="info-current-card-bottom">
+
+                  <article class="number-credit-card">
+
+                    <figure>
+                      <i></i>
+                    </figure>
+                    <article class="number-card">
+                      <span>#6544 8979 2586 7852#</span>
+                    </article>
+                    <span class="delete-card">
+                      #Eliminar#
+                    </span>
+
+                  </article>
+                  <article class="info-current-payment">
+
+                    <p>#Se te cobrará de esta tarrjeta 2 putos euros de mierda todos los meses el dia 7. Para de tarjeta primero elimina tu puta tarjeta coño#</p>
+
+                  </article>
+
+                </article>
+
+              </article>
+
+            </article>
+
+          </article>
+
+          <article class="preferences-hdd-payment-bottom">
+            <article class="ui-btn accept atras">
+              <span>#Guardar#</span>
+            </article>
+          </article>
+
+
+
+        </section>
+
+        <section class="preferences-hdd-payment space free active">
+
+          <article class="preferences-hdd-payment-top">
+
+            <figure>
+              <i></i>
+            </figure>
+            <span></span>
 
           </article>
 
@@ -77,11 +255,13 @@
 
             <article class="box-current-plan">
 
+
               <article class="box-current-plan-top">
-                <span>#Plan activo#</span>
+                <span></span>
               </article>
 
               <article class="box-current-plan-middle">
+                <!--
                 <article class="premium-version">
                   <article class="premium-info">
                     <article class="left">
@@ -95,18 +275,21 @@
                     <span>#Siguiente pago el 12/12/2012#</span>
                   </article>
                 </article>
-
-                <!--
-                <article class="free active">
-                  <article class="img-info-plan"></article>
-                </article>
               -->
+
+
+                <article class="free active">
+                  <article class="img-info-plan">
+                    Imagen con la oferta peinso que es lo mejor
+                  </article>
+                </article>
+
 
               </article>
 
               <article class="box-current-plan-bottom">
-                <article class="ui-btn accept">
-                  <span>#Boton Aceptar#</span>
+                <article class="ui-btn  siguiente accept">
+                  <span></span>
                 </article>
               </article>
 
@@ -114,14 +297,14 @@
             </article>
           </article>
         </section>
-        <section class="preferences-hdd-payment more">
+        <section class="preferences-hdd-payment free more ">
 
 
                 <article class="preferences-hdd-payment-top">
                   <figure>
                     <i></i>
                   </figure>
-                  <span>#TITTLE#</span>
+                  <span></span>
                 </article>
 
                 <article class="preferences-hdd-payment-middle">
@@ -129,114 +312,245 @@
                   <article class="current-plan-options">
 
                     <article class="info-current-plan">
-                      <article class="info-options big-box-hdd">
-                          <article class="options-top">
-                            <article class="options-top-left">
-                              <span class="big-text">#50GB Extra#</span>
-                              <span>#2€/mes#</span>
-                            </article>
-
-                            <article class="change-plan">
-                                <span>#Modificar#</span>
-                            </article>
-                          </article>
-
-                          <article class="options-middle">
-                            <span>#Se cobra el 7 de cada mes#</span>
-                          </article>
-
-                          <article class="options-bottom">
-                            <span>#Espacio total#</span>
-                            <span class="big-text grey">#75GB#</span>
-                          </article>
+                      <article class="current-information one">
+                        <li></li>
+                        <article class="paragraph">
+                          <span></span>
+                        </article>
+                      </article>
+                      <article class="current-information two">
+                        <li></li>
+                        <article class="paragraph">
+                          <span></span>
+                        </article>
                       </article>
                     </article>
 
                     <article class="info-current-card">
 
-                      <article class="info-current-card-top">
+                      <article class="info-current-card-left">
+                        <article class="info-current-quantity">
 
-                        <article class="type-card small-box-hdd">
-
-                          <article class="img-card">
-
-                          </article>
-                          <span>#Tarjeta de credito#</span>
-
-                        </article>
-
-                        <!--
-
-                        <article class="inevio-credit small-box-hdd">
-
-                          <article class="img-card">
-
-                          </article>
-                          <span>#INEVIO CREDIT#</span>
+                          <span>500</span>
+                          <figure>
+                            <i>€</i>
+                          </figure>
 
                         </article>
-
-                        -->
-
                       </article>
 
-                      <article class="info-current-card-bottom">
+                      <article class="info-current-card-right">
 
-                        <article class="number-credit-card">
+                        <article class="info-current-card-button top">
+                              <article class="card-button more">
+                                <figure>
+                                  <i>+</i>
+                                </figure>
+                              </article>
+                        </article>
 
-                          <figure>
-                            <i></i>
-                          </figure>
-                          <article class="number-card">
-                            <span>#6544 8979 2586 7852#</span>
+                        <article class="info-current-card-button middle">
+
+                          <article class="show-space-selected ui-input">
+
+                            <span class="big-text">7920</span>
+                            <span>GB</span>
+
                           </article>
-                          <span class="delete-card">
-                            #Eliminar#
-                          </span>
 
                         </article>
-                        <article class="info-current-payment">
 
-                          <p>#Se te cobrará de esta tarrjeta 2 putos euros de mierda todos los meses el dia 7. Para de tarjeta primero elimina tu puta tarjeta coño#</p>
-
+                        <article class="info-current-card-button bottom">
+                          <article class="card-button minus">
+                            <figure>
+                              <i>-</i>
+                            </figure>
+                          </article>
                         </article>
 
                       </article>
 
                     </article>
 
-                  </article>
 
-                  <!--
-                  <article class="more-space">
 
                   </article>
 
-                -->
+
                 </article>
 
 
                 <article class="preferences-hdd-payment-bottom">
-                  <article class="ui-btn accept">
-                    <span>#Siguiente#</span>
+                  <article class="ui-btn siguiente accept">
+                    <span></span>
                   </article>
                 </article>
 
 
         </section>
 
+        <section class="preferences-hdd-payment free order">
+
+                  <article class="preferences-hdd-payment-top">
+                    <figure>
+                      <i></i>
+                    </figure>
+                    <span>#TITTLE#</span>
+                  </article>
+
+                  <article class="preferences-hdd-payment-middle">
+
+
+                    <article class="current-plan-options">
+
+                      <article class="info-current-plan">
+                        <article class="info-options big-box-hdd">
+                            <article class="options-top">
+                                <article class="options-top-tittle">
+                                  <span>RESUMEN</span>
+                                </article>
+                                <article class="options-top-body">
+                                  <span>Espacio actual</span>
+                                  <article class="body-bottom">
+                                    <article class="left">
+                                      <span>25GB</span>
+                                    </article>
+                                    <article class="right">
+                                      <span>Gratis</span>
+                                    </article>
+                                  </article>
+                                </article>
+                            </article>
+
+                            <article class="options-middle">
+                              <span>#Se cobra el 7 de cada mes#</span>
+                            </article>
+
+                            <article class="options-bottom">
+                              <span>#Espacio total#</span>
+                              <span class="big-text grey">#75GB#</span>
+                            </article>
+                        </article>
+                      </article>
+
+                      <article class="info-current-card">
+
+                        <article class="info-current-card-top">
+
+                          <article class="type-card small-box-hdd">
+
+                            <article class="img-card">
+
+                            </article>
+                            <span>#Tarjeta de credito#</span>
+
+                          </article>
+
+                          <!--
+
+                          <article class="inevio-credit small-box-hdd">
+
+                            <article class="img-card">
+
+                            </article>
+                            <span>#INEVIO CREDIT#</span>
+
+                          </article>
+
+                          -->
+
+
+                        </article>
+
+                        <article class="info-current-card-bottom">
+
+                          <article class="owner-credit-card">
+                            <input class="owner-card" placeholder="Nombre del titular">
+                            </input>
+                          </article>
+
+
+                          <article class="number-credit-card">
+                            <input class="number-card" placeholder="Numero de la tarjeta">
+                            </input>
+                          </article>
+
+                          <article class="options-credit-card">
+
+                            <article class="month-credit-card">
+                              <input class="month-card" placeholder="Mes">
+                              </input>
+                            </article>
+
+                            <article class="year-credit-card">
+                              <input class="year-card" placeholder="Año">
+                              </input>
+                            </article>
+
+                            <article class="code-credit-card">
+                              <input class="code-card" placeholder="CVV">
+                              </input>
+                            </article>
+
+                          </article>
+
+                          <article class="info-current-payment">
+
+                            <p>#Se te maricaaaaaaaaararrarararrraaaaaara de tarjeta primero elimina tu puta tarjeta coño#</p>
+
+                          </article>
+
+                        </article>
+
+                      </article>
+
+                    </article>
+
+                  </article>
+
+
+                  <article class="preferences-hdd-payment-bottom">
+                    <article class="ui-btn accept siguiente">
+                      <span>#Siguiente#</span>
+                    </article>
+                  </article>
+
+
+
+
+
+
+        </section>
+
+        <section class="preferences-hdd-payment free finish">
+
+          <article class="finish-top">
+
+            <article class="img-finish">
+              Aqui va la img
+            </article>
+
+          </article>
+
+          <article class="finish-middle">
+
+            <span>¡Felicidades! Has aumentado tu espacio a </span>
+            <span class="info-space">75GB.</span>
+
+          </article>
+
+          <article class="finish-bottom">
+
+            <article class="ui-btn accept inicio">
+                <span>Finalizar</span>
+            </article>
+
+          </article>
+
+        </section>
+
       </section>
 
-      <!--
-
-      <section class="preferences-hdd-payment order">
-
-      </section>
-
-      <section class="preferences-hdd-payment finish">
-
-      </section>
-    -->
 
       <!--
         <span class="preferences-bottom-title hdd"></span>
