Increase/Decrease in storage

--- a/main.html
+++ b/main.html
@@ -313,13 +313,13 @@
 
                     <article class="info-current-plan">
                       <article class="current-information one">
-                        <li></li>
+                        <li><span></span></li>
                         <article class="paragraph">
                           <span></span>
                         </article>
                       </article>
                       <article class="current-information two">
-                        <li></li>
+                        <li><span></span></li>
                         <article class="paragraph">
                           <span></span>
                         </article>
@@ -331,9 +331,9 @@
                       <article class="info-current-card-left">
                         <article class="info-current-quantity">
 
-                          <span>500</span>
+                          <span></span>
                           <figure>
-                            <i>€</i>
+                            <i></i>
                           </figure>
 
                         </article>
@@ -342,7 +342,7 @@
                       <article class="info-current-card-right">
 
                         <article class="info-current-card-button top">
-                              <article class="card-button more">
+                              <article class="card-button moreStorage">
                                 <figure>
                                   <i>+</i>
                                 </figure>
@@ -353,15 +353,15 @@
 
                           <article class="show-space-selected ui-input">
 
-                            <span class="big-text">7920</span>
-                            <span>GB</span>
+                            <span class="big-text"></span>
+                            <span></span>
 
                           </article>
 
                         </article>
 
                         <article class="info-current-card-button bottom">
-                          <article class="card-button minus">
+                          <article class="card-button minusStorage">
                             <figure>
                               <i>-</i>
                             </figure>
@@ -395,7 +395,7 @@
                     <figure>
                       <i></i>
                     </figure>
-                    <span>#TITTLE#</span>
+                    <span></span>
                   </article>
 
                   <article class="preferences-hdd-payment-middle">
@@ -407,28 +407,28 @@
                         <article class="info-options big-box-hdd">
                             <article class="options-top">
                                 <article class="options-top-tittle">
-                                  <span>RESUMEN</span>
+                                  <span></span>
                                 </article>
                                 <article class="options-top-body">
-                                  <span>Espacio actual</span>
+                                  <span></span>
                                   <article class="body-bottom">
                                     <article class="left">
-                                      <span>25GB</span>
+                                      <span></span>
                                     </article>
                                     <article class="right">
-                                      <span>Gratis</span>
+                                      <span></span>
                                     </article>
                                   </article>
                                 </article>
                             </article>
 
                             <article class="options-middle">
-                              <span>#Se cobra el 7 de cada mes#</span>
+                              <span></span>
                             </article>
 
                             <article class="options-bottom">
-                              <span>#Espacio total#</span>
-                              <span class="big-text grey">#75GB#</span>
+                              <span></span>
+                              <span class="big-text grey"></span>
                             </article>
                         </article>
                       </article>
@@ -442,7 +442,7 @@
                             <article class="img-card">
 
                             </article>
-                            <span>#Tarjeta de credito#</span>
+                            <span></span>
 
                           </article>
 
@@ -496,7 +496,7 @@
 
                           <article class="info-current-payment">
 
-                            <p>#Se te maricaaaaaaaaararrarararrraaaaaara de tarjeta primero elimina tu puta tarjeta coño#</p>
+                            <p></p>
 
                           </article>
 
@@ -511,7 +511,7 @@
 
                   <article class="preferences-hdd-payment-bottom">
                     <article class="ui-btn accept siguiente">
-                      <span>#Siguiente#</span>
+                      <span></span>
                     </article>
                   </article>
 
@@ -527,22 +527,22 @@
           <article class="finish-top">
 
             <article class="img-finish">
-              Aqui va la img
+
             </article>
 
           </article>
 
           <article class="finish-middle">
 
-            <span>¡Felicidades! Has aumentado tu espacio a </span>
-            <span class="info-space">75GB.</span>
+            <span></span>
+            <span class="info-space"></span>
 
           </article>
 
           <article class="finish-bottom">
 
             <article class="ui-btn accept inicio">
-                <span>Finalizar</span>
+                <span></span>
             </article>
 
           </article>
