--- a/main.html
+++ b/main.html
@@ -55,7 +55,7 @@
               <figure>
                 <i></i>
               </figure>
-              <span>#TITTLE PREMIUM#</span>
+              <span></span>
 
             </article>
 
@@ -82,7 +82,7 @@
 
 
                 <article class="box-current-plan-top">
-                  <span>#Plan activo#</span>
+                  <span></span>
                 </article>
 
                 <article class="box-current-plan-middle">
@@ -90,14 +90,14 @@
                   <article class="premium-version">
                     <article class="premium-info">
                       <article class="left">
-                        <span>#50GB extra#</span>
+                        <span></span>
                       </article>
                       <article class="right">
-                        <span>#2€/MES#</span>
+                        <span></span>
                       </article>
                     </article>
                     <article class="premium-date">
-                      <span>#Siguiente pago el 12/12/2012#</span>
+                      <span></span>
                     </article>
                   </article>
 
@@ -106,7 +106,7 @@
 
                 <article class="box-current-plan-bottom">
                   <article class="ui-btn siguiente accept">
-                    <span>#Boton Aceptar#</span>
+                    <span></span>
                   </article>
                 </article>
 
@@ -124,7 +124,7 @@
             <figure>
               <i></i>
             </figure>
-            <span>#TITTLE PREMIUM#</span>
+            <span></span>
 
 
           </article>
@@ -137,22 +137,22 @@
                 <article class="info-options big-box-hdd">
                     <article class="options-top">
                       <article class="options-top-left">
-                        <span class="big-text">#50GB Extra#</span>
-                        <span>#2€/mes#</span>
+                        <span class="big-text"></span>
+                        <span></span>
                       </article>
 
                       <article class="change-plan">
-                          <span>#Modificar#</span>
+                          <span></span>
                       </article>
                     </article>
 
                     <article class="options-middle">
-                      <span>#Se cobra el 7 de cada mes#</span>
+                      <span></span>
                     </article>
 
                     <article class="options-bottom">
-                      <span>#Espacio total#</span>
-                      <span class="big-text grey">#75GB#</span>
+                      <span></span>
+                      <span class="big-text grey"></span>
                     </article>
                 </article>
               </article>
@@ -166,7 +166,7 @@
                     <article class="img-card">
 
                     </article>
-                    <span>#Tarjeta de credito#</span>
+                    <span></span>
 
                   </article>
 
@@ -192,16 +192,16 @@
                       <i></i>
                     </figure>
                     <article class="number-card">
-                      <span>#6544 8979 2586 7852#</span>
+                      <span></span>
                     </article>
                     <span class="delete-card">
-                      #Eliminar#
+
                     </span>
 
                   </article>
                   <article class="info-current-payment">
 
-                    <p>#Se te cobrará de esta tarrjeta 2 putos euros de mierda todos los meses el dia 7. Para de tarjeta primero elimina tu puta tarjeta coño#</p>
+                    <span></span>
 
                   </article>
 
@@ -215,7 +215,7 @@
 
           <article class="preferences-hdd-payment-bottom">
             <article class="ui-btn accept atras">
-              <span>#Guardar#</span>
+              <span></span>
             </article>
           </article>
 
@@ -427,8 +427,21 @@
                             </article>
 
                             <article class="options-bottom">
-                              <span></span>
-                              <span class="big-text grey"></span>
+                              <article class="top">
+                                <span class="left"></span>
+                                <span class="right"></span>
+                              </article>
+                              <article class="bottom">
+
+                                <article class="left">
+                                  <span class="big"></span>
+                                </article>
+
+                                <article class="right">
+                                  <span class="big"></span>
+                                  <span></span>
+                                </article>
+                              </article>
                             </article>
                         </article>
                       </article>
@@ -496,7 +509,7 @@
 
                           <article class="info-current-payment">
 
-                            <p></p>
+                            <span></span>
 
                           </article>
 
@@ -1123,8 +1136,8 @@
 
         <!--
         <span class="preferences-about-version"></span>
-        <p class="preferences-about-text first wz-selectable">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse non neque tincidunt, ullamcorper mi nec, eleifend ligula. Aliquam interdum augue mauris, viverra cursus dui imperdiet vitae. Fusce porttitor non libero ac tempor. In hac habitasse platea dictumst. Curabitur gravida feugiat adipiscing. Aliquam porta mi in mollis interdum. Curabitur eget fermentum mauris.</p>
-        <p class="preferences-about-text second wz-selectable">Cras et eros vitae diam sagittis consectetur in varius tellus. Nam sed lacinia justo. Mauris nunc quam, imperdiet pellentesque imperdiet at, vulputate nec felis. Ut cursus augue at dapibus pharetra. Fusce pretium porta lacus pellentesque scelerisque. Nulla aliquet nisl eget rutrum tincidunt. Cras lacinia rhoncus sapien, quis ultricies metus tristique quis. Nunc faucibus sit amet urna vel convallis. Proin eu ligula rhoncus, rhoncus mi sit amet, eleifend neque. Aenean a justo risus. Suspendisse ultrices sem mauris, sed interdum nibh tempor nec.</p>
+        <spanclass="preferences-about-text first wz-selectable">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse non neque tincidunt, ullamcorper mi nec, eleifend ligula. Aliquam interdum augue mauris, viverra cursus dui imperdiet vitae. Fusce porttitor non libero ac tempor. In hac habitasse platea dictumst. Curabitur gravida feugiat adipiscing. Aliquam porta mi in mollis interdum. Curabitur eget fermentum mauris.</span>
+        <spanclass="preferences-about-text second wz-selectable">Cras et eros vitae diam sagittis consectetur in varius tellus. Nam sed lacinia justo. Mauris nunc quam, imperdiet pellentesque imperdiet at, vulputate nec felis. Ut cursus augue at dapibus pharetra. Fusce pretium porta lacus pellentesque scelerisque. Nulla aliquet nisl eget rutrum tincidunt. Cras lacinia rhoncus sapien, quis ultricies metus tristique quis. Nunc faucibus sit amet urna vel convallis. Proin eu ligula rhoncus, rhoncus mi sit amet, eleifend neque. Aenean a justo risus. Suspendisse ultrices sem mauris, sed interdum nibh tempor nec.</span>
         <article class="preferences-about-footer">
             <span class="preferences-about-link legal"></span>
             <span class="preferences-about-link privacy"></span>
@@ -1142,8 +1155,8 @@
 
         <img src="https://static.inevio.com/app/374/logo.png" />
         <span class="preferences-about-version"></span>
-        <p class="preferences-about-text first wz-selectable">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse non neque tincidunt, ullamcorper mi nec, eleifend ligula. Aliquam interdum augue mauris, viverra cursus dui imperdiet vitae. Fusce porttitor non libero ac tempor. In hac habitasse platea dictumst. Curabitur gravida feugiat adipiscing. Aliquam porta mi in mollis interdum. Curabitur eget fermentum mauris.</p>
-        <p class="preferences-about-text second wz-selectable">Cras et eros vitae diam sagittis consectetur in varius tellus. Nam sed lacinia justo. Mauris nunc quam, imperdiet pellentesque imperdiet at, vulputate nec felis. Ut cursus augue at dapibus pharetra. Fusce pretium porta lacus pellentesque scelerisque. Nulla aliquet nisl eget rutrum tincidunt. Cras lacinia rhoncus sapien, quis ultricies metus tristique quis. Nunc faucibus sit amet urna vel convallis. Proin eu ligula rhoncus, rhoncus mi sit amet, eleifend neque. Aenean a justo risus. Suspendisse ultrices sem mauris, sed interdum nibh tempor nec.</p>
+        <spanclass="preferences-about-text first wz-selectable">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse non neque tincidunt, ullamcorper mi nec, eleifend ligula. Aliquam interdum augue mauris, viverra cursus dui imperdiet vitae. Fusce porttitor non libero ac tempor. In hac habitasse platea dictumst. Curabitur gravida feugiat adipiscing. Aliquam porta mi in mollis interdum. Curabitur eget fermentum mauris.</span>
+        <spanclass="preferences-about-text second wz-selectable">Cras et eros vitae diam sagittis consectetur in varius tellus. Nam sed lacinia justo. Mauris nunc quam, imperdiet pellentesque imperdiet at, vulputate nec felis. Ut cursus augue at dapibus pharetra. Fusce pretium porta lacus pellentesque scelerisque. Nulla aliquet nisl eget rutrum tincidunt. Cras lacinia rhoncus sapien, quis ultricies metus tristique quis. Nunc faucibus sit amet urna vel convallis. Proin eu ligula rhoncus, rhoncus mi sit amet, eleifend neque. Aenean a justo risus. Suspendisse ultrices sem mauris, sed interdum nibh tempor nec.</span>
         <article class="preferences-about-footer">
             <span class="preferences-about-link legal"></span>
             <span class="preferences-about-link privacy"></span>
