--- a/main.html
+++ b/main.html
@@ -43,8 +43,7 @@
     <!-- HDD ZONE START -->
 
     <section class="preferences-bottom-content hdd">
-
-      <section class="hdd-container free-user">
+      <section class="hdd-container premium-user">
 
         <section class="preferences-hdd-payment space-premium premium">
 
@@ -63,20 +62,22 @@
               <article class="left">
                 <article class="box-hdd-usage">
                   <article class="hdd-info preferences-hdd-quota big-box-hdd">
-                        <span class="preferences-hdd-usage"></span>
-
-                        <figure class="preferences-hdd-cake">
-                          <span class="preferences-hdd-cake-circle">
-                            <span class="preferences-hdd-cake-total"></span>
-                            <span class="preferences-hdd-cake-free"></span>
-                          </span>
-
-                            <canvas class="preferences-hdd-canvas" width="220" height="221"></canvas>
-
-                        </figure>
+                    <article class="top">
+                      <span class="preferences-hdd-usage"></span>
+                    </article>
+                    <article class="bottom usage-circle">
+                      <figure class="preferences-hdd-cake">
+                        <article class="preferences-hdd-cake-circle">
+                          <span class="preferences-hdd-cake-total"></span>
+                          <span class="preferences-hdd-cake-free"></span>
+                        </article>
+                          <!--
+                          <canvas class="preferences-hdd-canvas" width="220" height="221"></canvas>
+                          -->
+                      </figure>
+                      <canvas class="preferences-hdd-canvas-cake" width="242" height="242"></canvas>
+                    </article>
                   </article>
-
-
                 </article>
               </article>
               <article class="right">
@@ -177,7 +178,7 @@
 
                 <article class="info-current-card-top">
 
-                  <article class="type-card small-box-hdd">
+                  <article class="type-card small-box-hdd active">
 
                     <article class="img-card">
 
@@ -225,7 +226,7 @@
                 <article class="info-current-without-card-bottom">
                   <article class="top">
                     <article class="top-top">
-                      <figure class="img-add-card">#imagen#</figure>
+                      <figure class="img-add-card"></figure>
                     </article>
                     <article class="top-bottom">
                       <span></span>
@@ -255,7 +256,7 @@
 
         </section>
 
-        <section class="preferences-hdd-payment space free active">
+        <section class="preferences-hdd-payment space free">
 
           <article class="preferences-hdd-payment-top">
 
@@ -270,14 +271,21 @@
             <article class="left">
               <article class="box-hdd-usage">
                 <article class="hdd-info preferences-hdd-quota big-box-hdd">
-                      <span class="preferences-hdd-usage"></span>
-                      <figure class="preferences-hdd-cake">
-                        <span class="preferences-hdd-cake-circle">
-                          <span class="preferences-hdd-cake-total"></span>
-                          <span class="preferences-hdd-cake-free"></span>
-                        </span>
-                          <canvas class="preferences-hdd-canvas" width="220" height="221"></canvas>
-                      </figure>
+                  <article class="top">
+                    <span class="preferences-hdd-usage"></span>
+                  </article>
+                  <article class="bottom usage-circle">
+                    <figure class="preferences-hdd-cake">
+                      <article class="preferences-hdd-cake-circle">
+                        <span class="preferences-hdd-cake-total"></span>
+                        <span class="preferences-hdd-cake-free"></span>
+                      </article>
+                        <!--
+                        <canvas class="preferences-hdd-canvas" width="220" height="221"></canvas>
+                        -->
+                    </figure>
+                    <canvas class="preferences-hdd-canvas-cake" width="242" height="242"></canvas>
+                  </article>
                 </article>
               </article>
             </article>
@@ -516,7 +524,7 @@
 
                           <article class="info-current-card-top">
 
-                            <article class="type-card small-box-hdd">
+                            <article class="type-card small-box-hdd active">
 
                               <article class="img-card">
 
