Modify space and finish premium

--- a/main.html
+++ b/main.html
@@ -256,6 +256,140 @@
 
         </section>
 
+        <section class="preferences-hdd-payment premium modify-space ">
+
+                <article class="preferences-hdd-payment-top">
+                  <article class="black-circle mini atras">
+                    <figure></figure>
+                  </article>
+                  <span></span>
+                </article>
+
+                <article class="preferences-hdd-payment-middle">
+
+                  <article class="current-plan-options">
+
+                    <article class="info-current-plan">
+                      <article class="current-information one">
+                        <article class="li-circle">
+                          <figure class="li-circle"></figure>
+                          <span></span>
+                        </article>
+                        <article class="paragraph">
+                          <span></span>
+                        </article>
+                      </article>
+                      <article class="current-information two">
+                        <article  class="li-circle">
+                          <figure></figure>
+                          <span></span>
+                        </article>
+                        <article class="paragraph">
+                          <span></span>
+                        </article>
+                      </article>
+                    </article>
+
+                    <article class="info-current-card">
+
+                      <article class="info-current-card-left">
+                        <article class="info-current-quantity">
+
+                          <article class="quantity">
+                            <span></span>
+                          </article>
+                          <article class="quantity-container">
+                            <span class="top"></span>
+                            <span class="bottom"></span>
+                          </article>
+
+                        </article>
+                      </article>
+
+                      <article class="info-current-card-right">
+
+                        <article class="info-current-card-button top">
+                              <article class="card-button moreStorage">
+                                <article class="black-circle maxi more-icon">
+                                  <figure></figure>
+                                </article>
+                              </article>
+                        </article>
+
+                        <article class="info-current-card-button middle">
+
+                          <article class="show-space-selected ui-input">
+
+                            <article class="container">
+                              <span class="big-text"></span>
+                              <span></span>
+
+                            </article>
+
+                          </article>
+
+                        </article>
+
+                        <article class="info-current-card-button bottom">
+                          <article class="card-button minusStorage">
+                            <article class="black-circle maxi minus-icon">
+                              <figure></figure>
+                            </article>
+                          </article>
+                        </article>
+
+                      </article>
+
+                    </article>
+
+
+
+                  </article>
+
+
+                </article>
+
+
+                <article class="preferences-hdd-payment-bottom">
+                  <button class="ui-btn siguiente accept">
+                    <span></span>
+                  </button>
+                </article>
+
+
+        </section>
+
+
+        <section class="preferences-hdd-payment premium finish-premium">
+
+          <article class="finish-top">
+
+            <article class="img-finish">
+
+            </article>
+
+          </article>
+
+          <article class="finish-middle">
+
+            <span></span>
+            <span class="info-space"></span>
+
+          </article>
+
+          <article class="finish-bottom">
+
+            <button class="ui-btn accept inicio">
+                <span></span>
+            </button>
+
+
+          </article>
+
+        </section>
+
+
+
         <section class="preferences-hdd-payment space free">
 
           <article class="preferences-hdd-payment-top">
